--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -101,3 +101,7 @@
     padding: 3px;
     cursor: pointer;
 }
+
+.active {
+  border: 2px solid var(--red);
+}
