--- a/src/components/CartItem.css
+++ b/src/components/CartItem.css
@@ -1,48 +1,43 @@
 .cart_item_div {
     border-bottom: 1px solid var(--rose-100);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
-.cart_item_div h4 {
+.cart-items-wrapper .cart_item_div:last-child {
+    margin-bottom: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.cart-dessert-title {
     color: var(--rose-900);
     text-align: start;
-    grid-column: 1 / 3;
-    grid-row: 1;
     margin-bottom: 0.5rem;
 }
 
-.price_div {
+.cart-total-price-item-div {
     display: flex;
-    grid-row: 2;
-    grid-column: 1 / 3;
     gap: 0.5rem;
-    margin-bottom: 1.5rem;
-}
-.cart_item_div span:nth-child(1) {
-    color: var(--red);
-    
 }
 
-.cart_item_div span:nth-child(2) {
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 150%;
-    letter-spacing: 0px;
+.cart-quantity-of-dessert {
+    color: var(--red);
+
+}
+
+.cart-price-of-dessert {
     color: var(--rose-500);
 }
 
-.cart_item_div span:nth-child(3) {
+.cart-dessert-total-price {
     color: var(--rose-500);
 }
 
 .cart_item_div img {
     margin: 0;
     align-self: center;
-    justify-self: flex-end;
-    grid-row: 1 / 3;
     border-radius: 50%;
     border: 2px solid var(--rose-400);
     padding: 3px;
